# sofics

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL_DEPENDENCIES.md  README.md  build.sh  dakota.in  driver.sh  post_processor.sh  pre_processor.sh
.github/workflows/: draft-pdf.yml
cmake/: AerosBuild.cmake  Dependencies.cmake  M2CBuild.cmake  Submodules.cmake  aeros.cmake
doc/: INSTALL_DEPENDENCIES.md
examples/1d_gas_piston/: README.md  config.sh  dakota.in  post_pro.sh  pre_pro.sh  run.sh
examples/1d_gas_piston/piston/: CMakeLists.txt
examples/1d_gas_piston/piston/parser/: Lexer.C  Makefile  Parser.output  Parser.tab.cpp  Parser.tab.h
examples/1d_gas_piston/templatedir/: Makefile  StateCalculator.cpp  input.st.template  spring.st.template
examples/explosion_containment/full_optimization/: README.md  dakota.in  run.sh
examples/explosion_containment/full_optimization/templates/: fem.in.template  struct.geo.template
examples/explosion_containment/short_async_evaluations/: README.md  dakota.in  run.sh
examples/shock_panel/: README.md  config.sh  dakota.in  post_pro.sh  run.sh
examples/shock_panel/shell_panel/: attribute_generator  attribute_generator.cpp  config.sh  dakota.in  post_pro.sh  pre_pro.sh  run.sh
examples/shock_panel/shell_panel/templatedir/: fem.in.template  input.st.template  mesh.include  mesh.include.surf1  struct.geo.template
examples/shock_panel/solid_panel/: dakota.in  post_pro.sh  pre_pro.sh
examples/shock_panel/solid_panel/templatedir/: fem.in.template  input.st.template  struct.geo.template
examples/short_async_evaluations/: README.md  dakota.in  myconfig.sh  run.sh
paper/: paper.bib  paper.md
scripts/: CMakeLists.txt  analysis_setup.sh  approx_fsi_checks.sh  approx_fsi_driver.sh  command_line_parser.sh  driver.sh.in  fsi_checks.sh  fsi_driver.sh  global_defs.sh  node_list_calculator.sh  post_processor.sh  pre_processor.sh  sofics-env.sh.in
src/: CMakeLists.txt  analysis_setup.sh  approx_fsi_checks.sh  approx_fsi_driver.sh  checks.sh  command_line_parser.sh  dakota.in  driver.sh  error_driver.sh  fest_checks.sh  fsi_checks.sh  fsi_driver.sh  global_defs.sh  meta_generator.sh  node_list_calculator.sh  post_processor.sh  postprocessor.cpp  pre_processor.sh
templates/: input.st.template  struct.geo.template
tests/blast_container/: dakota.in  myconfig.sh
tests/blast_container/templates/: struct.geo.template
tests/full_blast_container_optimization/templates/: SphericalShock.txt.template
tests/short_async_evaluations/: dakota.in  myconfig.sh
tools/: CMakeLists.txt
tools/aeros2dakota/: CMakeLists.txt  aeros2dakota.cpp
tools/gmsh2aeros/: CMakeLists.txt
